namespace Server3;

public interface IReference
{
    public void Dispose();
}